infra/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.39.26.7824",
      "templateHash": "17105916733787052432"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources"
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureuser",
      "metadata": {
        "description": "Username for the Virtual Machine"
      }
    },
    "adminPublicKey": {
      "type": "string",
      "metadata": {
        "description": "SSH Public Key for the Virtual Machine"
      }
    },
    "dbPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Database Password"
      }
    },
    "duckDnsToken": {
      "type": "securestring",
      "metadata": {
        "description": "DuckDNS Token"
      }
    }
  },
  "variables": {
    "$fxv#0": "#!/bin/bash\n\n# 1. Update and Install\napt update\napt install postgresql postgresql-contrib -y\n\n# 2. Configure PostgreSQL to listen on all interfaces\n# Find the config file path (usually /etc/postgresql/15/main/postgresql.conf or similar depending on version)\n# We use a wildcard to catch the version number\nCONF_DIR=$(find /etc/postgresql -name main -type d | head -n 1)\n\nif [ -z \"$CONF_DIR\" ]; then\n    echo \"PostgreSQL configuration directory not found!\"\n    exit 1\n [...]
    "$fxv#1": "#!/bin/bash\r\n\r\n# 1. Update and Install\r\napt update\r\napt install nginx git python3-full python3-pip python3-venv -y\r\n\r\n# 2. Get Website Files\r\nrm -rf /var/www/html/*\r\ngit clone https://github.com/loopaware/open-webinar.git /var/www/html/\r\n\r\n# 3. Setup Python Virtual Environment & Dependencies\r\ncd /var/www/html\r\npython3 -m venv venv\r\nsource venv/bin/activate\r\npip install -r requirements.txt\r\n\r\n# 4. Setup Python App Service\r\n# We expect DB_HOST to be [...]
    "$fxv#2": "#!/bin/bash\napt update\napt install nginx certbot python3-certbot-nginx -y\n\n# Create DuckDNS update script\ncat <<DUCK > /usr/local/bin/duckdns_update.sh\n#!/bin/bash\ncurl \"https://www.duckdns.org/update?domains=webinar-funtime-deluxe&token=__DUCKDNS_TOKEN__&ip=\"\nDUCK\nchmod +x /usr/local/bin/duckdns_update.sh\n\n# Run it once immediately\n/usr/local/bin/duckdns_update.sh\n\n# WAIT for DNS propagation (Essential for Certbot validation)\necho \"Waiting 60 seconds for DNS pro [...]
    "vnetName": "SvampVNet",
    "subnetName": "SvampSubnet",
    "vnetAddressPrefix": "10.0.0.0/16",
    "subnetAddressPrefix": "10.0.1.0/24"
  },
  "resources": [
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2021-02-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefix": "[variables('subnetAddressPrefix')]"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-02-01",
      "name": "ProxyNSG",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHTTP",
            "properties": {
              "priority": 100,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80"
            }
          },
          {
            "name": "AllowHTTPS",
            "properties": {
              "priority": 101,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-02-01",
      "name": "BastionNSG",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowSSH",
            "properties": {
              "priority": 100,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "22"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-02-01",
      "name": "InternalNSG",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": []
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2021-02-01",
      "name": "FrontendProxyVM-ip",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2021-02-01",
      "name": "BastionVM-ip",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2021-02-01",
      "name": "DatabaseVM-nic",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2021-02-01').subnets[0].id]"
              },
              "privateIPAllocationMethod": "Dynamic"
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'InternalNSG')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'InternalNSG')]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2021-02-01",
      "name": "BackendVM-nic",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2021-02-01').subnets[0].id]"
              },
              "privateIPAllocationMethod": "Dynamic"
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'InternalNSG')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'InternalNSG')]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2021-02-01",
      "name": "FrontendProxyVM-nic",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2021-02-01').subnets[0].id]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'FrontendProxyVM-ip')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'ProxyNSG')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'ProxyNSG')]",
        "[resourceId('Microsoft.Network/publicIPAddresses', 'FrontendProxyVM-ip')]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2021-02-01",
      "name": "BastionVM-nic",
      "location": "[parameters('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', variables('vnetName')), '2021-02-01').subnets[0].id]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'BastionVM-ip')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'BastionNSG')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'BastionNSG')]",
        "[resourceId('Microsoft.Network/publicIPAddresses', 'BastionVM-ip')]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-07-01",
      "name": "DatabaseVM",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B2s_v2"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            }
          },
          "imageReference": {
            "publisher": "Debian",
            "offer": "debian-13",
            "sku": "13",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'DatabaseVM-nic')]"
            }
          ]
        },
        "osProfile": {
          "computerName": "DatabaseVM",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[format('/home/{0}/.ssh/authorized_keys', parameters('adminUsername'))]",
                  "keyData": "[parameters('adminPublicKey')]"
                }
              ]
            }
          },
          "customData": "[base64(replace(variables('$fxv#0'), 'PLACEHOLDER_DB_PASSWORD', parameters('dbPassword')))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', 'DatabaseVM-nic')]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-07-01",
      "name": "BackendVM",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B2s_v2"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            }
          },
          "imageReference": {
            "publisher": "Debian",
            "offer": "debian-13",
            "sku": "13",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'BackendVM-nic')]"
            }
          ]
        },
        "osProfile": {
          "computerName": "BackendVM",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[format('/home/{0}/.ssh/authorized_keys', parameters('adminUsername'))]",
                  "keyData": "[parameters('adminPublicKey')]"
                }
              ]
            }
          },
          "customData": "[base64(format('#!/bin/bash\nexport DB_HOST=\"{0}\"\nexport DB_PASSWORD=\"{1}\"\n{2}', reference(resourceId('Microsoft.Network/networkInterfaces', 'DatabaseVM-nic'), '2021-02-01').ipConfigurations[0].properties.privateIPAddress, parameters('dbPassword'), variables('$fxv#1')))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', 'BackendVM-nic')]",
        "[resourceId('Microsoft.Network/networkInterfaces', 'DatabaseVM-nic')]",
        "[resourceId('Microsoft.Compute/virtualMachines', 'DatabaseVM')]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-07-01",
      "name": "FrontendProxyVM",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B2s_v2"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            }
          },
          "imageReference": {
            "publisher": "Debian",
            "offer": "debian-13",
            "sku": "13",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'FrontendProxyVM-nic')]"
            }
          ]
        },
        "osProfile": {
          "computerName": "FrontendProxyVM",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[format('/home/{0}/.ssh/authorized_keys', parameters('adminUsername'))]",
                  "keyData": "[parameters('adminPublicKey')]"
                }
              ]
            }
          },
          "customData": "[base64(replace(replace(variables('$fxv#2'), '__DUCKDNS_TOKEN__', parameters('duckDnsToken')), '__BACKEND_IP__', reference(resourceId('Microsoft.Network/networkInterfaces', 'BackendVM-nic'), '2021-02-01').ipConfigurations[0].properties.privateIPAddress))]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', 'BackendVM-nic')]",
        "[resourceId('Microsoft.Compute/virtualMachines', 'BackendVM')]",
        "[resourceId('Microsoft.Network/networkInterfaces', 'FrontendProxyVM-nic')]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-07-01",
      "name": "bastionVM",
      "location": "[parameters('location')]",
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B2s_v2"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            }
          },
          "imageReference": {
            "publisher": "Debian",
            "offer": "debian-13",
            "sku": "13",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'BastionVM-nic')]"
            }
          ]
        },
        "osProfile": {
          "computerName": "bastionVM",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[format('/home/{0}/.ssh/authorized_keys', parameters('adminUsername'))]",
                  "keyData": "[parameters('adminPublicKey')]"
                }
              ]
            }
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', 'BastionVM-nic')]"
      ]
    }
  ],
  "outputs": {
    "bastionPublicIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'BastionVM-ip'), '2021-02-01').ipAddress]"
    },
    "proxyPublicIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', 'FrontendProxyVM-ip'), '2021-02-01').ipAddress]"
    },
    "dbPrivateIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', 'DatabaseVM-nic'), '2021-02-01').ipConfigurations[0].properties.privateIPAddress]"
    }
  }
}
